# SlicerBatchAnonymize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DSCI_Anonymize/: CMakeLists.txt  DSCI_Anonymize.py
DSCI_Anonymize/Resources/UI/: DSCI_Anonymize.ui
SlicerBatchAnonymize/: CMakeLists.txt  SlicerBatchAnonymize.py
SlicerBatchAnonymize/Resources/UI/: SlicerBatchAnonymize.ui
